# gym-tracker-system

./: .gitignore  README.en.md  README.md
api/: .gitignore  pyproject.toml
api/app/: main.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: auth.py  dashboard.py  exercises.py  measurements.py  sessions.py
api/app/core/: auth.py  config.py  security.py
api/app/db/: seed.py  session.py
api/app/db/models/: __init__.py  body_measurement.py  exercise.py  profile.py  session_set.py  user.py  workout_session.py
api/app/repositories/: exercises.py  measurements.py  sessions.py  users.py
api/app/schemas/: auth.py  dashboard.py  exercise.py  measurement.py  session.py  user.py
api/app/services/: auth.py  exercise.py  measurement.py  session.py
api/tests/: conftest.py  test_auth.py  test_health.py  test_workout_flow.py
docs/: GYM_TRACKER_SYSTEM_PROMPT.md  PROJECT_CONTEXT_PROMPT.txt  VERCEL_DEPLOY_PROMPT.txt  getting-started.md  managed-deployment.md  performance-analytics.md  repository-structure.md  roadmap.md  system-overview.md  web-app-feasibility.md
docs/obsidian/: 00-indice.md  01-estado-actual.md  02-problemas-resueltos.md  03-supabase-auth.md  04-analitica-e-informes.md  05-pendientes.md
excel/: Gym_Tracker.xlsx
excel-engine/scripts/: build_workbook.py  rebuild_validations.py  validate_workbook.py
excel-engine/workbook/: Gym_Tracker.xlsx  sample-workbook.md
preview/: index.html
shared/schemas/: exercise-catalog.schema.json
web-app/: README.md  eslint.config.mjs  package-lock.json  package.json
web-app/app/: globals.css  layout.tsx  (+1 more)
(+57 files in other folders)
