[project]
name = "gym-tracker-api"
version = "0.1.0"
description = "API del Gym Tracker con autenticacion, sesiones y exportacion a Excel."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12,<0.116.0",
  "uvicorn[standard]>=0.34.2,<0.35.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "pwdlib[argon2]>=0.2.1,<0.3.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "pymysql>=1.1.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=8.3.5,<9.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
